--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,7 +1,7 @@
 /*------------ Variables -----------*/
 
-$brandprimary: #d96528;
-$brandsecondary: #03c1c1;
+$brandprimary: #e9db1e;
+$brandsecondary: #ec00b1;
 
 /*------------  Global   -----------*/
 
